--- a/functions/package.json
+++ b/functions/package.json
@@ -7,8 +7,9 @@
   "private": true,
   "dependencies": {
     "express": "^4.17.1",
-    "firebase-admin": "^8.5.0",
-    "firebase-functions": "^3.2.0",
+    "firebase": "^7.14.0",
+    "firebase-admin": "^8.10.0",
+    "firebase-functions": "^3.6.0",
     "nuxt": "^2.9.2"
   }
 }
