--- a/src/package.json
+++ b/src/package.json
@@ -11,14 +11,16 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/pwa": "^2.6.0",
-    "nuxt": "^2.9.2"
+    "@nuxtjs/pwa": "^3.0.0-beta.16",
+    "firebase": "^7.14.0",
+    "nuxt": "^2.12.2"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.2.1",
-    "eslint-plugin-vue": "^5.2.3"
+    "eslint-plugin-vue": "^5.2.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0"
   }
 }
