reject file which is not pushed

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # dependencies
+.gitignore
+.firebaserc
+.node-version
+
 node_modules
 
 # public
@@ -12,12 +16,16 @@ firebase-debug.log
 .firebase
 
 #plugins
-plugins
+./src/plugins
 
 #config
 config
 
-nuxt.config.js
+./src/nuxt.config.js
 
 
-firestore*
+firestore.rules
+firestore.indexes.json
+databases.rules
+firebase.json
+.node_vers
